# HR

./: .env  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  HRConfig.h.in  app.cpp  main.cpp
cmake/: packages.cmake
cmake/Modules/: FindMYSQLPP.cmake  FindMySQLCppConn.cmake
include/HR/: EnvReader.h
src/: CMakeLists.txt  EnvReader.cpp  hrlib.cpp
tests/: CMakeLists.txt
